최대한 swagger 에 들어가지 않는 변수, 함수들 private public 조정
